<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_result"
    tools:context=".fragment.ResultFragment">

    <TextView
        android:id="@+id/scoreLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"/>

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ones"/>

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twos"/>

    <TextView
        android:id="@+id/score3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threes"/>

    <TextView
        android:id="@+id/score4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fours"/>

    <TextView
        android:id="@+id/score5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fives"/>

    <TextView
        android:id="@+id/score6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixes"/>

    <TextView
        android:id="@+id/score7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sevens"/>

    <TextView
        android:id="@+id/score8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eights"/>

    <TextView
        android:id="@+id/score9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nines"/>

    <TextView
        android:id="@+id/score10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tens"/>

    <TextView
        android:id="@+id/score11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevens"/>

    <TextView
        android:id="@+id/score12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twelves"/>

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score"/>

</LinearLayout>